--- a/Exploration/2.Iris/project_breast.ipynb
+++ b/Exploration/2.Iris/project_breast.ipynb
@@ -318,17 +318,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.shape : (569, 30)\n",
+      "label.shape : (569,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'data.shape : {data.shape}\\n'\n",
+    "      f'label.shape : {label.shape}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 데이터\n",
+    "\n",
+    "|데이터셋 크기|feature 크기|feature 형태|\n",
+    "|:---:|:--:|:--:|\n",
+    "|569|30|float|\n",
+    "\n",
     "### 모델 성능 비교 (macro avg, f1 score)\n",
     "\n",
-    "##### randome_forest = logistic_regression > decision_tree > support vector machine > stochastic gradient descent\n",
+    "|randome_forest|logistic_regression|decision_tree|support_vector_machine|stochastic_gradient_descent|\n",
+    "|:---:|:---:|:---:|:---:|:---:|\n",
+    "|0.93|0.93|0.91|0.9|0.86|\n",
+    "\n",
+    "### 분석\n",
+    "\n",
+    "데이터셋 수 : 보통   \n",
+    "데이터셋 밸런스 : 불균형   \n",
+    "특성 수 : 보통   \n",
     "\n",
     "### metrics = macro avg, f1 score\n",
     "\n",
     "- f1 score : 정밀도와 재현율을 모두 따지므로 모든 지표를 볼 수 있어 더 정확하다고 생각합니다.\n",
-    "- macro avg : 각 클래스의 데이터 수와 관계없이 정확도를 반영할 수 있어서 좋다고 생각합니다.\n",
+    "- macro avg : 각 클래스의 데이터 수와 관계없이 정확도를 반영할 수 있어서 좋다고 생각합니다.   \n",
     "    weighted avg는 수가 많은 데이터의 영향을 너무 많이 받아, 적은 데이터의 정확도가 무시됩니다."
    ]
   },
