--- a/Exploration/2.Iris/project_digits.ipynb
+++ b/Exploration/2.Iris/project_digits.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,17 +288,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.shape : (1797, 64)\n",
+      "label.shape : (1797,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'data.shape : {data.shape}\\n'\n",
+    "      f'label.shape : {label.shape}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 데이터\n",
+    "\n",
+    "|데이터셋 크기|feature 크기|feature 형태|\n",
+    "|:---:|:--:|:--:|\n",
+    "|1797|8 x 8 pixels|이미지|\n",
+    "\n",
     "### 모델 성능 비교 (macro avg, f1 score)\n",
     "\n",
-    "##### support vector machine > randome_forest > logistic_regression > stochastic gradient descent = decision_tree\n",
+    "|support vector machine|random_forest|logistic_regression|stochastic gradient descent|decision_tree|\n",
+    "|:---:|:---:|:---:|:---:|:---:|\n",
+    "|0.99|0.97|0.96|0.96|0.83|\n",
+    "\n",
+    "### 분석\n",
+    "\n",
+    "데이터셋 수 : 많음   \n",
+    "데이터셋 밸런스 : 균형   \n",
+    "특성 수 : 많음   \n",
+    "\n",
     "\n",
     "### metrics = macro avg, f1 score\n",
     "\n",
     "- f1 score : 정밀도와 재현율을 모두 따지므로 모든 지표를 볼 수 있어 더 정확하다고 생각합니다.\n",
-    "- macro avg : 각 클래스의 데이터 수와 관계없이 정확도를 반영할 수 있어서 좋다고 생각합니다.\n",
+    "- macro avg : 각 클래스의 데이터 수와 관계없이 정확도를 반영할 수 있어서 좋다고 생각합니다.   \n",
     "    weighted avg는 수가 많은 데이터의 영향을 너무 많이 받아, 적은 데이터의 정확도가 무시됩니다."
    ]
   },
